--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
       <div class="hero-box">
         <h1>Your Trusted Partner in Health for Every Generation.</h1>
-        <p>
+        <p class="text-black">
           At Ajit Medical Shop, we provide genuine medicines and expert care you
           can rely on. Quality healthcare is now just a click away.
         </p>
@@ -242,8 +242,9 @@
 
     <section id="image-gallery" class="py-5">
       <div class="container">
-        <h2 class="text-center mb-4" style="color: #3fbbc0">
-          Pharmacy Image Gallery
+        <h2 class="text-center mb-4 fw-bold" style="color: #444">
+          Gallery
+          <div class="gallery-line mx-auto"></div>
         </h2>
 
         <div class="row g-4">
@@ -325,7 +326,6 @@
       <!-- Modal -->
       <div class="modal fade" id="imageModal" tabindex="-1">
         <div class="modal-dialog modal-dialog-centered modal-xl">
-          
           <div
             class="modal-content bg-transparent border-0 shadow-none modal-white-bg"
           >
