--- a/index.html
+++ b/index.html
@@ -166,10 +166,10 @@
         <div class="emergency-number px-4 py-3 rounded-pill text-center">
           <i class="fa-solid fa-phone me-2"></i>
           <a
-            href="tel:+155895548855"
+            href="tel:+919665651122"
             class="text-white fw-bold fs-4 text-decoration-none"
           >
-            +1 5589 55488 55
+            +91 9665651122
           </a>
         </div>
       </div>
@@ -550,7 +550,7 @@
         <!-- map -->
         <div class="contact-map mb-5">
           <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d122283.79400671698!2d74.15646588457898!3d16.708452233396038!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc1000cdec07a29%3A0xece8ea642952e42f!2sKolhapur%2C%20Maharashtra!5e0!3m2!1sen!2sin!4v1767688598477!5m2!1sen!2sin"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d222.67736683057802!2d74.09474816262022!3d16.41689261481484!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc05bbc012e3e37%3A0xa57350ea995346d4!2sAJIT%20MEDICALS!5e1!3m2!1sen!2sin!4v1767856295436!5m2!1sen!2sin"
             width="600"
             height="450"
             style="border: 0"
@@ -569,7 +569,9 @@
                     <i class="fa-solid fa-location-dot"></i>
                   </div>
                   <h5>Address</h5>
-                  <p>A108 Adam Street, New York, NY 535022</p>
+                  <p>
+                    Ajit Medical, Bazar Peth, Sarawade. 416212<br />Tal-Radhanagri, Dist: Kolhapur
+                  </p>
                 </div>
               </div>
 
@@ -579,7 +581,7 @@
                     <i class="fa-solid fa-phone"></i>
                   </div>
                   <h5>Call Us</h5>
-                  <p>+1 5589 55488 55</p>
+                  <p>+91 9665651122</p>
                 </div>
               </div>
 
@@ -654,7 +656,7 @@
     <footer id="footer" class="footer">
       <div class="footer-top py-5">
         <div class="container-lg">
-          <div class="row gy-4">
+          <div class="row gy-4 justify-content-center">
             <!-- about -->
             <div class="col-lg-4 col-md-6">
               <h4 class="footer-title">Medical Store</h4>
@@ -663,7 +665,7 @@
                 healthcare products, and professional guidance.
               </p>
               <p class="footer-contact">
-                <strong>Phone:</strong> +1 5589 55488 55<br />
+                <strong>Phone:</strong>+91 9665651122<br />
                 <strong>Email:</strong> info@example.com
               </p>
             </div>
@@ -715,19 +717,6 @@
                   <i class="fa-solid fa-chevron-right"></i> Personal Care Items
                 </li>
               </ul>
-            </div>
-
-            <!-- socian-media -->
-            <div class="col-lg-3 col-md-6">
-              <h5 class="footer-title">Follow Us</h5>
-              <p>Stay connected for updates and health tips.</p>
-
-              <div class="footer-social">
-                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-              </div>
             </div>
           </div>
         </div>
