--- a/index.html
+++ b/index.html
@@ -726,7 +726,7 @@
       <div class="footer-bottom text-center py-3">
         <div class="container">
           <small>
-            © 2026 <strong>Medical Store</strong>. All Rights Reserved.
+            <i class="fa-regular fa-copyright"></i> 2026 <strong>Medical Store</strong>. All Rights Reserved.
           </small>
         </div>
       </div>
