--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ajit Medical</title>
+    <title class="brand-name">AJIT MEDICALS</title>
+    <link rel="icon" type="image/x-icon" sizes="16x16 32x32 48x48" href="images/logo2.png">
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
@@ -13,10 +14,12 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
+
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+Devanagari:wght@700&display=swap"
       rel="stylesheet"
     />
+
     <link rel="stylesheet" href="styles.css" />
   </head>
 
@@ -41,9 +44,11 @@
       id="navbar-main"
     >
       <div class="container-lg">
-        <a class="navbar-brand fw-bold" href="#hero">
-          <img src="images/logo1.png" alt="ajit medical shop logo" /> AJIT
-          MEDICAL
+        <a class="navbar-brand d-flex align-items-center" href="#hero">
+          <div class="brand-logo me-2">
+            <img src="images/logo.jpeg" alt="Ajit Medical Logo" />
+          </div>
+          <span class="brand-name">AJIT MEDICALS</span>
         </a>
 
         <button
@@ -74,7 +79,7 @@
               <a class="nav-link" href="#contact">CONTACT</a>
             </li>
             <li class="nav-item">
-              <a class="btn" id="OrderNowbtn" href="#order-form"> Order Now </a>
+              <a class="btn" id="OrderNowbtn" href="#order-form">Order Now</a>
             </li>
           </ul>
         </div>
@@ -570,7 +575,8 @@
                   </div>
                   <h5>Address</h5>
                   <p>
-                    Ajit Medical, Bazar Peth, Sarawade. 416212<br />Tal-Radhanagri, Dist: Kolhapur
+                    Ajit Medical, Bazar Peth, Sarawade. 416212<br />Tal-Radhanagri,
+                    Dist: Kolhapur
                   </p>
                 </div>
               </div>
@@ -726,7 +732,8 @@
       <div class="footer-bottom text-center py-3">
         <div class="container">
           <small>
-            <i class="fa-regular fa-copyright"></i> 2026 <strong>Medical Store</strong>. All Rights Reserved.
+            <i class="fa-regular fa-copyright"></i> 2026
+            <strong>Medical Store</strong>. All Rights Reserved.
           </small>
         </div>
       </div>
